fastapi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastapi
  name: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      volumes:
        - name: vol-log
          emptyDir: {}
        - name: vol-secret-fluentd
          secret:
            secretName: fluentd
      containers:
        - name: fastapi
          image: treekat71/k8s-challenge:1.0
          volumeMounts:
            - name: vol-log
              mountPath: /app/log

        - name: log-collector
          image: treekat71/fluentd-s3:1.0
          volumeMounts:
            - name: vol-log
              mountPath: /log
              readOnly: true
            - name: vol-secret-fluentd
              mountPath: /fluentd/etc
              readOnly: true
