fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi
  name: fastapi
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: fastapi
  type: ClusterIP
