fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi
  labels:
    app: fastapi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /fastapi(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 8000
# https://fastapi.tiangolo.com/advanced/behind-a-proxy/
# https://github.com/tiangolo/fastapi/issues/2787
